styles.css
body{
    /* color: blue; */
    margin: 0;
    padding: 0;
    background-color: rgb(48, 150, 48);
    line-height: 1.8;
    font-family: Arial, sans-serif;

}
container{
    max-width: 1200px;
    margin: 0 auto;
    padding: 20px;
}
h1{
    text-align: center;
    color: white;
    background-color: rosybrown;
}
form{
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 20px;
}
label{
    margin-bottom: 10px;
    color: white;
}   
input, select{
    padding: 10px;
    margin-bottom: 20px;
    width: 200px;
}
button{
    padding: 10px 20px;
    background-color: white;
    border: none;
    cursor: pointer;
}
button:hover{
    background-color: lightgray;
}
#result{
    margin-top: 20px;
    text-align: center;
    font-size: 1.5em;
    color: white;
}
footer{
    text-align: center;
    padding: 10px;
    background-color: rgb(48, 150, 48);
    color: white;
    position: fixed;
    width: 100%;
    bottom: 0;
}   

